update workflow configuration and dependencies: - Refactor workflow to use `orchestrator_flow`. - Update Maven minimum version and plugin versions. - Maven wrapper to v3.3.4. and maven to 3.9.12